Adding contact page, updating artist description

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,6 +1,12 @@
-<div class="contact">
-  <h1>Booking</h1>
-  <p>booking@animaltestingrecords.co</p>
-  <!-- <h1>General</h1>
-  <p>jerry@animaltestingrecords.co</p> -->
+<div class="section-title">
+  <h2>Contact</h2>
 </div>
+
+<div class="contact">
+  <br />
+  To book one of our artists, please email booking@animaltestingrecords.co.
+  <br /> <br /> <br />
+  For general inquires, email our head of logistics, Jerry. His email is jerry@animaltestingrecords.co.
+</div>
+
+<link rel='stylesheet' href='/stylesheets/style.css' />
