--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -4,9 +4,7 @@
 
 <div class="contact">
   <br />
-  To book one of our artists, please email booking@animaltestingrecords.co.
-  <br /> <br /> <br />
-  For general inquires, email our head of logistics, Jerry. His email is jerry@animaltestingrecords.co.
+  For to book one of our artists or for general inquires, email our head of logistics, Jerry. His email is jerry@animaltestingrecords.co.
+  <br />
+  <br />
 </div>
-
-<link rel='stylesheet' href='/stylesheets/style.css' />
