--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,6 +39,10 @@
           <img src="/images/animals/snek.png"></img>
         </div>
         <!-- <a href="/blog"><h3 id="">Blog</h3></a> -->
+        <div id="merch" class="header-link">
+          <a href="/merch"><h3>MERCH</h3></a>
+          <img src="/images/animal_testing_records/merch/stickers/cassette.png"></img>
+        </div>
         <div id="contact" class="header-link">
           <a href="/contact"><h3>CONTACT</h3></a>
           <img src="/images/animals/monkey.png"></img>
